# windtunnel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  __init__.py  _config.yml  config.yaml  flow_gen.py  impact_evaluator.py  license  lob_sim.py  meta.yaml  optimizer.py  pyproject.toml  regime_gen.py  requirements.txt  scenario_builder.py  setup.cfg  setup.py  strategy_executor.py
configs/: market_crash_scenario.json
deepfolio/cross_validation/: combinatorial_purged_cv.py
deepfolio/data/: real_time_data.py
deepfolio/optimizers/: portfolio_transformer.py
deepfolio/pre_selection/: drop_correlated_assets.py  non_dominated_selection.py  select_k_extremes.py
docs/: conf.py  index.md  installation.md  usage.md
docs/modules/: api_reference.md  contributing.md  examples.md  genmarket.md  models.md  strategy_plugins.md
examples/: run_dynamic_stop_loss.py  run_impact_evaluator.py  run_interactive_plotting.py  run_nlp_config_generator.py  run_order_flow_generator.py  run_simulation.py  run_vae_regime_generator.py
examples/1_mean_risk/: README.txt  plot_10_tracking_error.py  plot_11_empirical_prior.py  plot_12_black_and_litterman.py  plot_13_factor_model.py  plot_14_black_litterman_factor_model.py  plot_1_maximum_sharpe_ratio.py  plot_2_minimum_CVaR.py  plot_3_efficient_frontier.py  plot_4_mean_variance_cdar.py  plot_5_weight_constraints.py  plot_6_transaction_costs.py  plot_7_management_fees.py  plot_8_regularization.py  plot_9_uncertainty_set.py
examples/2_risk_budgeting/: README.txt  plot_1_risk_parity_variance.py  plot_2_risk_busgeting_CVaR.py  plot_3_risk_parity_ledoit_wolf.py
examples/3_maxiumum_diversification/: README.txt  plot_1_maximum_divesification.py
examples/4_distributionally_robust_cvar/: README.txt  plot_1_distributionally_robust_cvar.py
examples/5_clustering/: plot_1_hrp_cvar.py  plot_2_herc_cdar.py  plot_3_hrp_vs_herc.py  plot_4_nco.py  (+1 more)
genmarket/: impact_evaluator.py  order_flow_generator.py  plotting.py  strategy_executor.py
models/: diffusion_model.py  lmm_generator.py  train_vae.py  vae_model.py
scripts/: run_experiments.py  stock_forecasting.py
tests/: test_api.py  test_conditioner.py  test_csdi.py  test_ddpm.py  test_dynamic_stop_loss.py  test_impact_evaluator.py  test_interactive_plotting.py  test_nlp_config_generator.py  test_order_flow_generator.py  test_retrieval.py  test_strategy_optimizer.py
windtunnel/: api.py  interactive_plotting.py  lob_simulator.py  nlp_config_generator.py  regime_generator.py  strategy_executor.py
(+112 files in other folders)
