[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "windtunnel"
version = "1.5.1"
description = "Retrieval-augmented conditional diffusion market simulator"
authors = ["Jialue Chen <jialuechen@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jialuechen/windtunnel"
repository = "https://github.com/jialuechen/windtunnel"

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.10"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
plotly = "*"
openai = "*"
fastdtw = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
windtunnel = "windtunnel.api:main"
